--- a/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/pages/locale/it/LC_MESSAGES/django.po
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/pages/locale/it/LC_MESSAGES/django.po
@@ -3,12 +3,11 @@
 # This file is distributed under the same license as the PACKAGE package.
 # abidibo <abidibo@gmail.com>, 2017.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-31 13:16+0200\n"
+"POT-Creation-Date: 2017-08-31 15:08+0200\n"
 "PO-Revision-Date: 2017-08-31 14444:16+0200\n"
 "Last-Translator: abidibo <abidibo@gmail.com>\n"
 "Language-Team: it <LL@li.org>\n"
@@ -19,10 +18,14 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: admin.py:14
+msgid "Main"
+msgstr "Principale"
+
+#: admin.py:20
 msgid "SEO"
 msgstr "SEO"
 
-#: admin.py:18
+#: admin.py:24
 msgid "Advanced options"
 msgstr "Opzioni avanzate"
 
@@ -32,18 +35,21 @@ msgstr "URL"
 
 #: forms.py:13
 msgid ""
-"Example: '/about/contact/'. Assicurati di inserire le barre diagonali iniziali e finali."
-msgstr "Ad esempio: '/about/contatti/'. "
+"Example: '/about/contact/'. Make sure to have leading and trailing slashes."
+msgstr ""
+"Esempio: '/about/contact/'. Assicurati di inserire le barre diagonali iniziali e finali."
 
 #: forms.py:16
 msgid ""
 "This value must contain only letters, numbers, dots, underscores, dashes, "
 "slashes or tildes."
-msgstr "Questo valore deve contenere solo lettere, numeri, punti, underscore, trattini, barre diagonali o tilde."
+msgstr ""
+"Questo valore deve contenere solo lettere, numeri, punti, underscore, "
+"trattini, barre diagonali o tilde."
 
 #: forms.py:30
 msgid "URL is missing a leading slash."
-msgstr ""
+msgstr "Manca una barra iniziale nella URL."
 
 #: forms.py:38
 msgid "URL is missing a trailing slash."
@@ -78,7 +84,9 @@ msgstr "nome template"
 msgid ""
 "Example: 'pages/contact_page.html'. If this isn't provided, the system will "
 "use 'pages/default.html'."
-msgstr "Esempio: 'flatpages/contact_page.html'. Se non specificato, il sistema userà 'flatpages/default.html'."
+msgstr ""
+"Esempio: 'flatpages/contact_page.html'. Se non specificato, il sistema userà "
+"'flatpages/default.html'."
 
 #: models.py:33
 msgid "registration required"
@@ -86,7 +94,9 @@ msgstr "registrazione obbligatoria"
 
 #: models.py:34
 msgid "If this is checked, only logged-in users will be able to view the page."
-msgstr "Se selezionato, solo gli utenti che hanno effettuato l'accesso potranno vedere la pagina."
+msgstr ""
+"Se selezionato, solo gli utenti che hanno effettuato l'accesso potranno "
+"vedere la pagina."
 
 #: models.py:37
 msgid "enable social sharing"
@@ -104,13 +114,25 @@ msgstr "pubblicata"
 msgid "meta title"
 msgstr "titolo meta tag"
 
+#: models.py:45
+msgid "default to page title"
+msgstr "default: titolo pagina"
+
 #: models.py:48
 msgid "meta description"
 msgstr "descrizione meta tag"
 
+#: models.py:49
+msgid "default to first 20 words of content"
+msgstr "default: prime 20 parole del contenuto"
+
 #: models.py:52
 msgid "meta keywords"
 msgstr "parole chiave meta tag"
+
+#: models.py:54
+msgid "default to page tags"
+msgstr "default: tag"
 
 #: models.py:58
 msgid "page"
